#ifndef MEMORY_H
#define MEMORY_H

#include "AbstractData.h"

class Memory : public AbstractData
{
public:
    Memory();

};

#endif // MEMORY_H
