@startuml

package IR {
    package Data {
        abstract class AbstractData
        class Constant
        class Memory
        class MemoryArray
        class Register
    }
    
    package BasicBlock {
        class BasicBlock
    }
}

AbstractData <|-- Register
AbstractData <|-- Memory

AbstractData <|-- MemoryArray
AbstractData <|-- Constant

@enduml
